# async-fastapi-sqlalchemy

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  compose.yaml  gunicorn.conf.py  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg
app/: db.py  main.py  settings.py
app/api/: main.py
app/api/notebooks/: schema.py  use_cases.py  views.py
app/api/notes/: schema.py  use_cases.py  views.py
app/config/: compose.env  local.env
app/models/: __init__.py  base.py  notebooks.py  notes.py  schema.py
app/tests/: conftest.py  test_main.py  utils.py
app/tests/api/notebooks/: test_views.py
app/tests/api/notes/: test_views.py
migrations/: env.py  script.py.mako
migrations/versions/: 24104b6e1e0c_add_tables.py  a8483365f505_initial_empty.py
